--- a/app/src/main/res/layout/activity_front_page.xml
+++ b/app/src/main/res/layout/activity_front_page.xml
@@ -18,7 +18,7 @@
         android:textSize="49sp" />
 
     <androidx.viewpager.widget.ViewPager
-        android:id="@+id/viewPager"
+        android:id="@+id/frontViewPager"
         android:layout_width="match_parent"
         android:layout_height="256dp"
         android:layout_below="@+id/frontPageTitle"
@@ -54,7 +54,7 @@
         android:id="@+id/eventTitle"
         android:layout_width="369dp"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/viewPager"
+        android:layout_below="@+id/frontViewPager"
         android:layout_alignParentStart="true"
         android:layout_marginStart="32dp"
         android:layout_marginTop="9dp"
