kml pick test fixed but does not find the data file

--- a/app/src/main/res/layout/activity_event_edit.xml
+++ b/app/src/main/res/layout/activity_event_edit.xml
@@ -212,7 +212,9 @@
 
                     <Button
                         android:text="Chose File"
-                        android:id="@+id/chose_file" />
+                        android:id="@+id/chose_file"
+                        android:layout_gravity="center"
+                        android:onClick="onFilePickClicked"/>
 
 
 
